--- a/public/index.html
+++ b/public/index.html
@@ -3,16 +3,12 @@
 <head>
     <title>Kandy | Send SMS</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <meta name="csrf-param" content="authenticity_token"/>
-    <meta name="csrf-token"
-          content="XckwFvqUgLy8JDoFWiYkAkKPVZXKWz1TDNkJl8Z4OdmwEJ7mfpPHaWPJOrUNPXe3JmPZisKpP2uPr0zwl1hWdQ=="/>
 
     <!--Load Bootstrap CSS (optional)-->
     <link rel="stylesheet" media="screen" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css"/>
     <link rel="stylesheet" media="screen"
           href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css"/>
 
-    <!--Load Kandy JS files (required - jQuery is required too!)-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 
     <!--Load Pace AJAX Progress Bar (optional)-->
@@ -115,7 +111,7 @@
                             if (data.message != 'success') {
                                 showMessage('Failed!', 'error');
                             } else {
-                                showMessage('Sent!', 'success');
+                                showMessage('The message has been sent!', 'success');
                             }
                         })
                         .fail(function () {
