--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
         <div class="col-md-6 col-md-offset-3" id="activity-container">
             <div id="app-details" class="clearfix">
                 <div class="col-md-6">
-                    <img src="https://www.kandy.io/assets/kandy_logo-072ca87958c5dca2a17fa5093af3e83f.png">
+                    <img class="kandy-logo" src="https://www.kandy.io/assets/kandy_logo-072ca87958c5dca2a17fa5093af3e83f.png">
                 </div>
                 <h1 class="h2">
                     IBM Bluemix App
@@ -77,7 +77,9 @@
                     <h3 class="text-center pull-left">Send SMS</h3>
 
                     <div class="pull-right logout-wrapper">
-                        <button class="btn btn-danger btn-sm pull-right" id="logout-btn">Logout</button>
+                        <button class="btn btn-warning btn-sm pull-right" id="logout-btn">
+                            <i class="glyphicon glyphicon-log-out"></i>
+                        </button>
                         <p class="h4 pull-right">
                             Welcome <strong><span class="username"></span></strong>
                         </p>
